assets/css/src/buddypress.css
/* ... */
.media .rtmedia-list.rtmedia-list-media>li.rtmedia-list-item .rtmedia-gallery-item-actions>a:not(.rtm-delete-media) {
    background: rgba(248, 248, 248, 0.15);
}

.media .rtmedia-list.rtmedia-list-media>li.rtmedia-list-item .rtmedia-gallery-item-actions .rtm-delete-media {
    margin-top: .5rem;
}

.media .rtmedia-list.rtmedia-list-media>li.rtmedia-list-item .rtmedia-gallery-item-actions .rtm-delete-media:hover {
    color: #f00;
}

.media .rtm-tabs li.active a {
    color: var(--color-theme-primary);
}

.media .rtm-tabs-content {
    padding: 15px;
    border: 1px solid var(--global-border-color);
    border-top: 0;
}

#buddypress.buddypress-wrap input[type="button"],
#buddypress.buddypress-wrap input[type="submit"],
#buddypress.buddypress-wrap a.rtm-button-back {
    padding: 8px 20px;
}

.media .rtmedia-editor-buttons {
    margin-top: 15px;
}

button.mfp-close,
button.mfp-arrow {
    border-radius: 0;
}

.rtmedia-gallery-item-actions .dashicons {
    transition: none;
}


/* rtm-lightbox */

body:not(.buddyx-mediapress) .mfp-arrow {
    cursor: pointer;
    position: absolute;
    filter: alpha(opacity=65);
    margin: 0;
    top: 50%;
    margin-top: -50px;
    padding: 0;
    width: 50px;
    height: 60px;
    -webkit-tap-highlight-color: transparent;
    opacity: 0;
    z-index: 10;
    -webkit-transition: all 300ms ease-out;
    transition: all 300ms ease-out;
    background: transparent;
    -webkit-appearance: none;
}

body:not(.buddyx-mediapress) .mfp-arrow::after {
    content: '';
    display: block;
    width: 0;
    height: 0;
    position: absolute;
    left: 0;
    top: 0;
    margin-top: 10px;
    margin-left: 35px;
    border: medium inset transparent;
}

body:not(.buddyx-mediapress) .mfp-arrow::after {
    border-top-width: 13px;
    border-bottom-width: 13px;
    top: 8px;
}

body:not(.buddyx-mediapress) .mfp-arrow-left::after,
body:not(.buddyx-mediapress) .mfp-arrow-right::after {
    font-family: "Font Awesome 6 Free";
    font-size: 24px;
    font-weight: 900;
    color: #fff;
    border-left: 0;
    margin-left: 13px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body:not(.buddyx-mediapress) .mfp-arrow-left::after {
    content: '\f104';
}

body:not(.buddyx-mediapress) .mfp-arrow-right::after {
    content: '\f105';
}

body:not(.buddyx-mediapress) .mfp-arrow-left::before {
    border: none;
}

body:not(.buddyx-mediapress) .mfp-arrow-right::before {
    border: none;
}


/*--------------------------------------------------------------
# Activity Directory
--------------------------------------------------------------*/

.activity-update-form {
    position: relative;
    margin: 0 0 15px 0;
    padding: 0;
    background: var(--color-theme-white-box);
    border: 1px solid var(--global-border-color);
    border-radius: var(--global-border-radius) !important;
    box-shadow: none;
}

.activity-update-form #whats-new-avatar {
    padding: 12px 15px;
    text-align: left;
    line-height: 0;
}

.activity-update-form #whats-new-avatar img {
    max-width: 50px;
}

#buddypress input#aw-whats-new-submit,
form.ac-form .ac-reply-content input {
    font-size: 14px;
    width: auto;
    font-weight: 500;
    letter-spacing: 0;
    height: 34px;
    padding: 0 20px !important;
    min-height: 34px;
    margin: 0;
    border-radius: var(--button-border-radius) !important;
}

select#whats-new-post-in {
    padding-right: 40px;
}

.buddypress-wrap #whats-new-post-in {
    font-size: initial;
}

.activity-update-form #whats-new-content {
    padding: 0;
}

.activity-update-form #whats-new-content {
    margin-left: 65px;
}

.activity-update-form #whats-new-post-in-box,
#buddypress.buddypress-wrap form#whats-new-form #whats-new-submit {
    margin: 10px 0;
    padding: 0;
}

#buddypress.buddypress-wrap form#whats-new-form #whats-new-submit {
    margin-left: auto;
}

.activity-update-form #whats-new-textarea textarea {
	background-color: var(--bx-color-bg-elevated, #ffffff);
    color: var(--bx-color-fg, #111111);
    padding: 10px;
    min-height: 70px;
    border-radius: var(--form-border-radius) !important;
}

.buddypress-wrap #whats-new-textarea {
    margin: 0;
    padding: 12px 15px;
    border: 0;
}

#buddypress #whats-new-options {
    background: rgba(0, 0, 0, .02);
    border-top: 1px solid var(--bx-color-border, #ddd);
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    margin-left: 0;
    padding: 0 15px;
}

#buddypress .activity-form #whats-new-options {
    overflow: visible;
}

#buddypress #whats-new-submit {
    margin: 10px 0 10px auto;
    display: flex;
    flex-flow: row-reverse;
}

.activity-update-form #whats-new-submit input {
    width: auto;
    margin-bottom: 0;
}

@media screen and (max-width: 46.8em) {
    .activity-update-form #whats-new-avatar {
        margin: 0;
        padding-bottom: 0;
    }

    .activity-update-form #whats-new-content {
        margin-left: 0;
    }
}

body.bp-nouveau .activity-update-form .rtmedia-uploader-div {
    margin-left: 15px;
    margin-bottom: 15px;
}

.activity-update-form #whats-new-post-in-box #whats-new-post-in-box-items {
    margin: 0;
}

.activity-update-form #whats-new-post-in-box #whats-new-post-in-box-items li {
    margin: 0 10px;
}

button#rtmedia-add-media-button-post-update,
.rtm-upload-button-wrapper button.rtmedia-comment-media-upload,
button.rtmedia-comment-media-upload {
    padding: .3em .5em !important;
    background: var(--bx-color-bg-elevated, #fff) !important;
    color: rgba(0, 0, 0, .6) !important;
    font-weight: 400;
    border-radius: .28571429rem !important;
    text-transform: none;
    text-shadow: none !important;
    box-shadow: inset 0 0 0 1px var(--bx-color-border, #e8e8e8);
}

.activity-list.bp-list {
    margin: 0;
    padding: 0;
    background: transparent;
    border: 0;
}
/* ... */

